--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Album 1</span>
-                    <img class="shop-item-image" src="Images/Album 1.png">
+                    <img class="shop-item-image" src="/src/img/Album 1.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$12.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 2</span>
-                    <img class="shop-item-image" src="Images/Album 2.png">
+                    <img class="shop-item-image" src="/src/img/Album 2.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$14.99</span>
                         <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 3</span>
-                    <img class="shop-item-image" src="Images/Album 3.png">
+                    <img class="shop-item-image" src="/src/img/Album 3.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$9.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 4</span>
-                    <img class="shop-item-image" src="Images/Album 4.png">
+                    <img class="shop-item-image" src="/src/img/Album 4.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -59,7 +59,7 @@
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">T-Shirt</span>
-                    <img class="shop-item-image" src="Images/Shirt.png">
+                    <img class="shop-item-image" src="/src/img/Shirt.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Coffee Cup</span>
-                    <img class="shop-item-image" src="Images/Cofee.png">
+                    <img class="shop-item-image" src="/src/img/Cofee.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">$6.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
@@ -96,17 +96,17 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/YouTube Logo.png">
+                            <img src="/src/img/Youtube Logo.png">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.spotify.com" target="_blank">
-                            <img src="Images/Spotify Logo.png">
+                            <img src="/src/img/Spotify Logo.png">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
-                            <img src="Images/Facebook Logo.png">
+                            <img src="/src/img/Facebook Logo.png">
                         </a>
                     </li>
                 </ul>
