--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics | Store</title>
+        <title>Hello World</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="/src/style/style.css" />
         <script src="/src/js/store.js" async></script>
@@ -15,7 +15,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">The Generics</h1>
+            <h1 class="band-name band-name-large">Hello World Store </h1>
         </header>
         <section class="container content-section">
             <h2 class="section-header">MUSIC</h2>
@@ -24,10 +24,11 @@
                     <span class="shop-item-title">Album 1</span>
                     <img class="shop-item-image" src="/src/img/Album 1.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">$12.99</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                      <span class="shop-item-price">$12.99</span>
+                      <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                     
                     </div>
-                </div>
+                  </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Album 2</span>
                     <img class="shop-item-image" src="/src/img/Album 2.png">
