--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="/src/style/style.css" />
         <script src="/src/js/store.js" async></script>
+        <script src="https://kit.fontawesome.com/f6dcf461c1.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="main-header">
@@ -26,6 +27,7 @@
                     <div class="shop-item-details">
                       <span class="shop-item-price">$12.99</span>
                       <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                      <button onclick="Toggle()" id="btnh1" class="btns" > <i class="fas fa-heart"></i> </button>
                      
                     </div>
                   </div>
@@ -35,6 +37,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$14.99</span>
                         <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
+                        <button onclick="Toggle()" id="btnh1" class="btns" >   <i class="fas fa-heart"></i>   </button>
                     </div>
                 </div>
                 <div class="shop-item">
@@ -43,6 +46,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$9.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button onclick="Toggle()" id="btnh1" class="btns" >   <i class="fas fa-heart"></i>   </button>
                     </div>
                 </div>
                 <div class="shop-item">
@@ -51,6 +55,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button onclick="Toggle()" id="btnh1" class="btns" >   <i class="fas fa-heart"></i>   </button>
                     </div>
                 </div>
             </div>
@@ -64,6 +69,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button onclick="Toggle()" id="btnh1" class="btns" >   <i class="fas fa-heart"></i>   </button>
                     </div>
                 </div>
                 <div class="shop-item">
@@ -72,6 +78,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$6.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button onclick="Toggle()" id="btnh1" class="btns" ><i class="fas fa-heart"></i></button>
                     </div>
                 </div>
             </div>
